@@ -1,5 +1,11 @@
 2008-04-16  Ben Van Mechelen  <me@benvm.be>
 
+	* garmon/scheduler.py:
+	    Add a QueueItem class. We now add OBDData with the same pid
+	    to the same QueueItem so we have to query the device only once.
+
+2008-04-16  Ben Van Mechelen  <me@benvm.be>
+
 	* garmon/plugin_manager.py:
         Removed reference to NotebookPlugin
 
